--- a/index.html
+++ b/index.html
@@ -11,8 +11,38 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <link rel="stylesheet" href="./style.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900" rel="stylesheet">
 </head>
 <body>
+<div class="product_card" data-qa="card">
+  <section class="top">
+    <img src="./images/imac.jpeg" alt="imac">
+  </section>
+
+  <section class="bottom">
+    <div class="title_block">
+      <h3 class="title">Моноблок APPLE A1419 iMac 27" Retina 5K (MNED2UA/A)</h3>
+      <p class="code">Код товара: 195434</p>
+    </div>
+    <div class="rating_block">
+      <div class="stars_rating">
+        <div> <img src="images/star-active.svg" alt="star active" class="star"> </div>
+        <div> <img src="images/star-active.svg" alt="star active" class="star"> </div>
+        <div> <img src="images/star-active.svg" alt="star active" class="star"> </div>
+        <div> <img src="images/star-active.svg" alt="star active" class="star"> </div>
+        <div> <img src="images/star.svg" alt="star inactive" class="star empty_star"> </div>
+      </div>
+      <p class="reviews">Отзывов: 5</p>
+    </div>
+    <div class="price_block">
+      <p class="title_price">Цена:</p>
+      <p class="price">69 999 грн</p>
+    </div>
+    <div class="btn">
+      <a href="#" data-qa="hover">купить</a>
+    </div>
+  </section>
+</div>
 
 <script type="text/javascript" src="./main.js"></script>
 </body>
